---- CODE FREEZE FOR SANE 1.0.10 ---
-- snapshot 1.0.10-pre3

2003-01-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.de.po po/sane-backends.es.po po/sane-backends.fr.po
	  po/sane-backends.pt.po po/sane-backends.ru.po po/sane-backends.sv.po:
	  Minor updates due to backend changes.
	* TODO: Added icc problem.
	* NEWS: Updated.

2003-01-25  Jochen Eisinger <jochen.eisinger@gmx.de>

	* sanei/sanei_pa4s2.c: added some #ifdefs to make it compile with
	  the Intel C++ Compiler (icc).
	* backend/mustek_pp.c: fixed some character encoding issues in
	  debug messages
	* README.linux: added a note about the Intel C++ Compiler
	  
2003-01-24  Jochen Eisinger <jochen.eisinger@gmx.de>

	* backend/mustek_pp_ccd300.c: continued on the CCD low-level driver.
	  There is still some bug in it, that keeps it from actually scanning
	  something...

2003-01-24  Jochen Eisinger <jochen.eisinger@gmx.de>

	* doc/descriptions/mustek_pp.desc: added supported scanners

2003-01-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/bh.c backend/coolscan.c: Minor conversion fixes (from
	  Andrea Suatoni <a.suatoni@telefonica.net>).
	* backend/test.c: Use "Color pattern" consistantly.
	* acinclude.m4 aclocal.m4 configure configure.in 
	  include/sane/config.h.in: Declare prototypes for all functions that
	  may miss on some platforms.
	* doc/descriptions/unsupported.desc: Added Mustek parport scanners.
	  Added more information for Primascan Colorado 2600u.
	* TODO: Updated Irix patches and desc section.

2003-01-24  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/plustek/Plustek-USB-TODO.txt
	  doc/plustek/Plustek-USB.txt
	  Documentation update
	* doc/descriptions/plustek.desc: status updates
	* backend/plustek.conf fixed options
	* backend/plustek.c backend/plustek-devs.c backend/plustek-usb.c
	  backend/plustek-usbhw.c backend/plustek-usbimg.c
	  backend/plustek-usbscan.c backend/plustek-usbshading.c
	  backend/plustek.h backend/plustek-usb.h